header section added with respons

--- a/index.html
+++ b/index.html
@@ -5,40 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoNest | Home</title>
     <link rel="shortcut icon" href="/assets/green-city.png" type="image/x-icon">
+    <style>
+          @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+          @import url('https://fonts.googleapis.com/css2?family=Montaga&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
       <!--header section-->
      <header>
-             <section class="navbar">
+             <section class="navbar pri-font">
 
                        <div class="Logo">
-                            <h1><span id="logoedit">Eco</span>Nest</h1>
+                            <h1><span class="pri-color" id="logoedit"><b>Eco</b></span>Nest</h1>
                         </div>
 
-                       <div class="nav-links"> 
-                         <ul>
-                              <a href="" class="navs">Home</a>
-                              <a href="" class="navs">About</a>
-                              <a href="" class="navs">Projects</a>
-                              <a href="" class="navs">Services</a>
-                              <a href="" class="navs">Contact</a>
+                       <div class="nav-links-container"> 
+                         <ul class="nav-links">
+                              <li><a href="#" class="navs">Home</a></li>
+                              <li><a href="#" class="navs">Projects</a></li>
+                              <li><a href="#" class="navs">Services</a></li>
+                              <li><a href="#" class="navs">Contact</a></li>
                          </ul>
                        </div>
              </section> 
-             <section class="banner"> 
-                               <h1>Architecture Rooted in Nature, Built for the Future</h1>
-                               <p>We craft bold, timeless, and sustainable structures that don’t just serve a purpose — 
-                                they shape how people live, work, and feel. From sketches to skylines, your vision becomes
+             <section class="banner">
+                               <h1 class="pri-font">Architecture Rooted in Nature, Built for the Future</h1>
+                               <p class="sec-font">We craft bold, timeless, and sustainable structures that don't just serve a purpose — 
+                                they shape how <br> people live, work, and feel. From sketches to skylines, your vision becomes
                                  our mission.</p>
-                                 <button class="btn-primary">View Our Work</button>
+                                 <button class="btn-primary sec-font">View Our Work</button>
                                  <img src="/assets/banner.png" alt="#">
              </section>
      </header>
 
+     <main>
+              
+     </main>
 
-
-     <main></main>
      <footer></footer>
 </body>
 </html>
