--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 they shape how <br> people live, work, and feel. From sketches to skylines, your vision becomes
                                  our mission.</p>
                                  <button class="btn-primary sec-font">View Our Work</button>
-                                 <img src="/assets/banner.png" alt="#">
+                                 <img src="./assets/banner.png" alt="#">
              </section>
      </header>
 
